[package]
name = "portfolio"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.18"
lazy_static = "1.3.0"
serde = "1.0.92"
serde_json = "1.0.39"
chrono = { version = "0.4", features = ["serde"] }
serde-aux = "0.6.1"

[lib]
name = "portfolio"
path = "src/lib.rs"

[[bin]]
name = "portfolio-cli"
path = "src/bin.rs"
